# contracts

./: .cspell.yml  .gitignore  .gitlab-ci.yml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  flake.nix  justfile
.github/workflows/: ci.yml  coverage.yml  lint.yml  release.yml
examples/: library.rs
scripts/: bump-changelogs  update-release-notes
src/: lib.rs
src/implementation/: codegen.rs  contract.rs  doc.rs  ensures.rs  invariant.rs  mod.rs  parse.rs  post.rs  pre.rs  requires.rs  traits.rs
tests/: functions.rs  implication.rs  issues.rs  methods.rs  old.rs  ranged_int.rs  traits.rs  ui.rs
tests/ui/: compile_error_in_predicate.stderr  description_must_be_last.rs  description_must_be_last.stderr  invariant_on_struct.stderr  old_in_requires.stderr  old_requires_one_argument.stderr  requires_on_struct.rs  requires_on_struct.stderr
tests/ui/fail/: always_false_predicate.rs  always_false_predicate.stderr  compile_error_in_predicate.rs  compile_error_in_predicate.stderr  description_must_be_last.stderr  invalid_predicate_syntax.rs  invalid_predicate_syntax.stderr  invariant_on_struct.rs  invariant_on_struct.stderr  old_in_requires.rs  old_in_requires.stderr  old_requires_one_argument.rs  old_requires_one_argument.stderr  requires_on_struct.stderr
tests/ui/pass/: basic_contracts.rs  combined_contract.rs  implication_and_old.rs  modes.rs  trait_contract.rs
