[package]
name = "contracts"
version = "0.2.2"
authors = ["karroffel <therzog@mail.de>"]
edition = "2018"
repository = "https://gitlab.com/karroffel/contracts"
license = "MPL-2.0"
readme = "README.md"
categories = [
    "development-tools",

]
keywords = [
    "design-by-contract",
    "contract-programming",
    "precondition",
    "postcondition",
    "invariant",
]
documentation = "https://docs.rs/contracts"
description = "Design-by-contract attributes"

[badges]
gitlab = { repository = "karroffel/contracts", branch = "master" }

[lib]
name = "contracts"
path = "src/lib.rs"
proc-macro = true

[features]
disable_contracts = []
override_debug = []
override_log = []

[dependencies]
syn = { version = "0.15.30", features = ["extra-traits", "full"] }
quote = "0.6.11"
proc-macro2 = "0.4.27"

[dev-dependencies]
quickcheck = "0.8.2"
quickcheck_macros = "0.8.0"
rand = "0.6.5"