[package]
name = "contracts"
version = "0.6.3"
description = "Design-by-contract attributes"
authors = ["karroffel <therzog@mail.de>"]
edition = "2018"
repository = "https://github.com/x52dev/contracts"
license = "MPL-2.0"
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
keywords = ["design-by-contract", "precondition", "postcondition", "invariant", "verification"]

[lib]
name = "contracts"
path = "src/lib.rs"
proc-macro = true

[features]
disable_contracts = []
override_debug = []
override_log = []
mirai_assertions = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
