[package]
name = "contracts"
version = "0.6.5"
description = "Design-by-contract attributes"
authors = ["karroffel <therzog@mail.de>"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
keywords = ["design-by-contract", "precondition", "postcondition", "invariant", "verification"]
repository = "https://github.com/x52dev/contracts"
license = "MPL-2.0"
edition = "2018"
rust-version = "1.65"

[lib]
name = "contracts"
path = "src/lib.rs"
proc-macro = true

[features]
disable_contracts = []
override_debug = []
override_log = []
mirai_assertions = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full", "visit", "visit-mut"] }
